# sgh

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  searchable.rs  ssh.rs  theme.rs  ui.rs
src/ssh_config/: host.rs  host_entry.rs  parser.rs
