[package]
name = "sgh"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for ssh"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mei28/sgh"
homepage = "https://github.com/mei28/sgh"
keywords = ["ssh", "tui" ,"cli"]
categories = ["cli", "tui" ]


[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
handlebars = "6.3.0"
itertools = "0.14.0"
ratatui = "0.29.0"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
shellexpand = "3.1.0"
shlex = "1.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tui-input = "0.11.1"
unicode-width = "0.2.0"
